--- a/index.html
+++ b/index.html
@@ -22,8 +22,18 @@
 
         <div class="search-container">
           <form action="#" method="get">
-              <input type="search" id="search-input" class="search-input" placeholder="Search...">
-              <input type="submit" value="&#x1F50D;" id="search-submit" class="search-submit">
+            <input
+              type="search"
+              id="search-input"
+              class="search-input"
+              placeholder="Search..."
+            />
+            <input
+              type="submit"
+              value="&#x1F50D;"
+              id="search-submit"
+              class="search-submit"
+            />
           </form>
         </div>
       </div>
@@ -87,6 +97,6 @@
         ======================== -->
 
     <!-- Add your JS here -->
-    <script src="js/scripts.js"></script>
+    <script src="scripts.js"></script>
   </body>
 </html>
