--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link href="css/normalize.css" rel="stylesheet" />
-    <link href="css/styles.css" rel="stylesheet" />
+    <link href="normalize.css" rel="stylesheet" />
+    <link href="styles.css" rel="stylesheet" />
   </head>
   <body>
     <!-- =======================
