--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link href="normalize.css" rel="stylesheet" />
-    <link href="styles.css" rel="stylesheet" />
+    <link href="styles/normalize.css" rel="stylesheet" />
+    <link href="styles/style.css" rel="stylesheet" />
   </head>
   <body>
     <!-- =======================
@@ -97,6 +97,6 @@
         ======================== -->
 
     <!-- Add your JS here -->
-    <script src="scripts.js"></script>
+    <script src="scripts/script.js"></script>
   </body>
 </html>
